--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>kesavan</h1>
-    <h2>bitch</h2>
-    <h3>slut</h3>
+    <h1>We are learning mern</h1>
+    <h2>what are you doing?</h2>
 </body>
 </html>
